# confluence_rag

./: README.md  pyproject.toml
confluence_rag/: config.py
confluence_rag/src/: app.py  confluence_rag_llamaindex.py  fetch_confluence_data.py  utils.py
confluence_rag/src/evaluation/: create_rag_eval_data.py  rag_eval.py
